--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,8 +3,8 @@
 @tailwind utilities;
 
 body {
-    font-family: "Lato", sans-serif;
-    background: white;
+    font-family: "Poppins", sans-serif;
+    background: lightgoldenrodyellow;
 }
 
 .navbar-bg {
