--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -4,9 +4,10 @@
 
 body {
     font-family: "Poppins", sans-serif;
-    background: white;
-}
-
+    background-image: linear-gradient(to top, #fad0c4 0%, #ffd1ff 100%);
+    /*background-image: linear-gradient(to top, #d299c2 0%, #fef9d7 100%);*/
+    /*background-image: linear-gradient(45deg, #ee9ca7 0%, #ffdde1 100%);}*/
+    }
 .navbar-bg {
     background: #C04848;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #480048, #C04848);  /* Chrome 10-25, Safari 5.1-6 */
